--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="title_activity_make_note">MakeNoteActivity</string>
     <string name="create_note">Create Note</string>
     <string name="edit_note">Edit Note</string>
+    <string name="create_pin">Create Pin</string>
+    <string name="settings">Settings</string>
     <string name="view_note">View Note</string>
     <string name="note_title_error">Please enter Note Title</string>
     <string name="create_note_error">Please enter Note Details</string>
