--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="create_note">Create Note</string>
     <string name="edit_note">Edit Note</string>
     <string name="create_pin">Create Pin</string>
+    <string name="setup_security">Security Settings</string>
     <string name="settings">Settings</string>
     <string name="view_note">View Note</string>
     <string name="note_title_error">Please enter Note Title</string>
@@ -20,4 +21,17 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="edit">Edit</string>
+    <string name="update_pin">Setup / Update PIN</string>
+    <string name="request_pin_start">Ask PIN at start</string>
+    <string name="update_pin_btn">Update PIN</string>
+    <string name="new_pin">New PIN</string>
+    <string name="confirm_new_pin">Confirm New PIN</string>
+    <string name="answer">Answer</string>
+
+    <string-array name="question_one_arrays">
+        <item>Name of first Pet</item>
+        <item>Favourite destination</item>
+        <item>Name of first Car</item>
+        <item>First job</item>
+    </string-array>
 </resources>
