--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,13 @@
     <string name="title_activity_make_note">MakeNoteActivity</string>
     <string name="create_note">Create Note</string>
     <string name="edit_note">Edit Note</string>
-    <string name="create_pin">Create Pin</string>
+    <string name="enter_pin">Enter Pin</string>
     <string name="setup_security">Security Settings</string>
     <string name="settings">Settings</string>
     <string name="view_note">View Note</string>
     <string name="note_title_error">Please enter Note Title</string>
     <string name="create_note_error">Please enter Note Details</string>
     <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
     <string name="delete_confirmation">Do you want to delete this note?</string>
     <string name="note_deleted">Note got deleted</string>
     <string name="save_note">Save Note</string>
@@ -28,6 +27,9 @@
     <string name="confirm_new_pin">Confirm PIN</string>
     <string name="answer">Answer</string>
     <string name="enter_security_answer">Please enter answer for selected question</string>
+    <string name="alert_title">Oops</string>
+    <string name="pin_does_not_match">Sorry, previous PIN does not match! Pls try again</string>
+    <string name="cancel">Cancel</string>
     <string-array name="question_one_arrays">
         <item>Name of first Pet</item>
         <item>Favourite destination</item>
