--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="pin_does_not_match">Sorry, previous PIN does not match! Pls try again</string>
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
+    <string name="wrong_answer">Wrong Answer !</string>
     <string-array name="question_one_arrays">
         <item>Name of first Pet</item>
         <item>Favourite destination</item>
