--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,13 @@
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
     <string name="wrong_answer">Wrong Answer !</string>
+    <string name="please_enter_valid_pin">Please enter valid PIN</string>
+    <string name="please_enter_confirm_pin">Please confirm PIN</string>
+    <string name="pin_and_confirm_pin_shouldmatch">PIN and Confirm PIN does not match</string>
+    <string name="answer_min_chars">Answer should be of minimum 4 character</string>
+    <string name="pin_will_not_be_asked_at_start">PIN will not be asked at start!</string>
+    <string name="please_setup_pin">Please set up PIN</string>
+    <string name="security_settings_updated">Security Settings updated</string>
     <string-array name="question_one_arrays">
         <item>Name of first Pet</item>
         <item>Favourite destination</item>
